--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ganga Singh - Full Stack Developer</title>
     <meta name="description" content="Portfolio of Ganga Singh - Full Stack Web Developer" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <meta name="author" content="Ganga Singh" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +15,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.27/bundled/lenis.min.js"></script>
-
     <meta property="og:title" content="Ganga Singh - Full Stack Developer" />
     <meta property="og:description" content="Portfolio of Ganga Singh - Full Stack Web Developer" />
     <meta property="og:type" content="website" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
